--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@ngrx/effects": "^13.2.0",
     "@ngrx/store": "^13.2.0",
     "@ngrx/store-devtools": "^13.2.0",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "concurrently": "^9.1.0",
+    "crypto-js": "^4.2.0",
     "json-server": "^0.17.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -32,6 +34,7 @@
     "@angular-devkit/build-angular": "~13.1.4",
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
@@ -41,5 +44,8 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.5.2"
+  },
+  "browser": {
+    "crypto": false
   }
 }
